--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -10,19 +10,26 @@
     <div class="blog-layout2">
         <div class="container">
         <div class="row">
-            <div class="col-md-6 image-center">
+            <div class="col-md-4 image-center">
                 <div class="blogs-image">
-                    <img src="./assets/images/services/image1.png">
+                    <img src="./assets/images/home/image3.png">
                  </div>
-                <h6>Designing a successful <br> product: Is not a daydream</h6>
-                <span>by Udaya Kumar Sivagurunathan</span>
+                <h5>Designing a successful product: Is not a daydream</h5>
+                <span>by Udaya Kumar Sivagurunathan </span>
             </div>
-            <div class="col-md-6 image-center">
+            <div class="col-md-4 image-center">
                 <div class="blogs-image">
-                    <img src="./assets/images/services/image2.png">
+                    <img src="./assets/images/home/image1.png">
                  </div>
-                 <h6>Ever thought why does <br> the colour green or sound</h6>
-                 <span>by Krithika Thirunavukkarasu</span>
+                 <h5>How to experience Five Senses — in Digital Commerce</h5>
+                 <span>by Veera Thiruppal</span>
+            </div>
+            <div class="col-md-4 image-center">
+                <div class="blogs-image">
+                    <img src="./assets/images/home/image2.png">
+                 </div>
+                <h5>Ever thought why does the colour green or sound of water brings calmness?</h5>
+                <span>by Krithika Thirunavukkarasu</span>
             </div>
         
     </div>
