--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -5,19 +5,16 @@
 .engagement{
     
     .banner{
-        background-image: url('/dev/assets/images/bg3.png');
-        background-repeat: no-repeat;
-        background-size: cover;
         position: relative;
-        height: 770px;
+        height: 700px;
+        padding: 245px 0px;
         background-color: #FA6D37;
-        border-bottom: 1px solid #F49875;
 
         .engagement-layout{
-            padding: 300px 30px;
         h1{
             font-size: 56px;
             color: #1f0b0c;
+            font-family: Baskerville;
             span{
                 color: #FFFFFF;
             }
@@ -26,6 +23,7 @@
             font-size: 36px;
             padding-top: 25px;
             color: #1f0b0c;
+            font-family: Muli;
              span{
                 color: #FFFFFF;
                 text-decoration: underline;
@@ -37,17 +35,14 @@
 @include media-breakpoint-down(lg) {
     .banner{
         height: 670px;
-        .engagement-layout{
-            padding: 250px 25px;
-    }
-
+        padding: 245px 0px;
     }
 }
 @include media-breakpoint-down(md) {
     .banner{
         height: 570px;
+        padding: 180px 0px;
         .engagement-layout{
-            padding: 210px 15px;
             h1{
                 font-size: 36px;
             }
@@ -62,140 +57,15 @@
 @include media-breakpoint-down(sm) {
     .banner{
         height: 600px;
+        padding: 150px 0px;
         .engagement-layout{
-            padding: 150px 0px;
             h1{
                 margin-bottom: 40px;
-            }
-    }
-
-    }
-}
-}
-
-/*.engagement-layout1{
-    background-color: #FA6D37;
-    
-
-    .design-left{
-        padding: 150px 30px;
-
-        h2{
-            font-size: 48px;
-            color: #FFFFFF;
-        }
-        p{
-            font-size: 24px;
-            color: #FFFFFF;
-            padding-top: 10px;
-        }
-    }
-    .design-right{
-        padding: 150px 30px;
-
-          .logo-image{
-            padding-top: 10px;
-            padding-bottom: 20px;
+              }
           }
-          p{
-            font-size: 24px;
-            color: #FFFFFF;
-        }
-    }
-    .nav-tabs{
-        border-bottom: 1px solid #dee2e6;
-        margin-right: -125px;
-        margin-left: -130px;
-        a{
-            padding: 6px 180px 6px 180px;
-            color: #FFFFFF;
-        }
-    }
-    .tabs{
-        background-color: #E56635;
-        margin-left: -15px;
-    }
-    .tabs1{
-        background-color: #E56635;
-    }
-    .nav-tabs .nav-link {
-        border: none !important;
-        border-top-left-radius: 0.25rem;
-        border-top-right-radius: 0.25rem;
-    }
-
-    @include media-breakpoint-down(lg) {
-       
-
-        .design-left{
-            padding: 140px 20px;
-        }
-        .design-right{
-            padding: 140px 20px;
-    
-              .logo-image{
-                padding-top: 10px;
-                padding-bottom: 20px;
-              }
-        }
-        .nav-tabs{
-            border-bottom: 1px solid #dee2e6;
-            margin-right: -125px;
-            margin-left: -130px;
-            a{
-                padding: 5px 140px 5px 140px;
-            }
-        }
-    }
-    @include media-breakpoint-down(md) {
- 
-
-        .design-left{
-            padding: 125px 15px;
-    
-            h2{
-                font-size: 28px;
-            }
-            p{
-                font-size: 20px;
-                padding-top: 10px;
-            }
-        }
-        .design-right{
-            padding: 125px 15px;
-    
-              .logo-image{
-                padding-top: 5px;
-                padding-bottom: 15px;
-              }
-              p{
-                font-size: 20px;
-            }
-        }
-        .nav-tabs{
-            border-bottom: 1px solid #dee2e6;
-            margin-right: -125px;
-            margin-left: -130px;
-            a{
-                padding: 5px 109px 5px 109px;
-            }
-        }
-    }
-    @include media-breakpoint-down(sm) {
-        
-        .design-left{
-            padding: 75px 5px;
-        }
-        .design-right{
-            padding: 75px 5px;
-    
-              .logo-image{
-                padding-top: 5px;
-                padding-bottom: 15px;
-              }
-        }
-    }
-}*/
+       }
+   }
+}
 
 .only-mobile{
     display: none;
@@ -293,12 +163,14 @@
         p{
             font-size: 18px;
             color: #FFFFFF;
+            font-family: Muli;
         }
         h2{
             font-size: 48px;
             font-weight: 500;
             margin-bottom: 40px;
             color: #FFFFFF;
+            font-family: Baskerville;
         }
     }
     .design-right{
@@ -311,6 +183,7 @@
           p{
             font-size: 18px;
             color: #FFFFFF;
+            font-family: Muli;
         }
     }
     .mt-2, .my-2 {
