--- a/src/app/modules/career/components/graphic-design-description/graphic-design-description.component.html
+++ b/src/app/modules/career/components/graphic-design-description/graphic-design-description.component.html
@@ -50,7 +50,7 @@
                     - Understanding of HTML/CSS is a plus
                    </p>
                    <div class="button">
-                      <div class="btn btn-white" routerLink="/career/ux/apply">Apply<img src="./assets/images/rightarrow-white.svg"></div>
+                      <div class="btn btn-white" routerLink="/career/job/apply">Apply<img src="./assets/images/rightarrow-white.svg"></div>
                    </div>
                 </div>
              </div>
