--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
@@ -35,7 +35,7 @@
                       - Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is<br>preferred.
                    </p>
                    <div class="button">
-                      <div class="btn btn-white" routerLink="/career/ui/apply">Apply<img src="./assets/images/rightarrow-white.svg"></div>
+                      <div class="btn btn-white" routerLink="/career/job/apply">Apply<img src="./assets/images/rightarrow-white.svg"></div>
                    </div>
                 </div>
              </div>
