--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
             <h2>What We Do</h2>
             <ul class="contact">
                 <li>
-                    <a href="#">Work</a>
+                    <a href="works">Work</a>
                 </li>
                 <li>
-                    <a href="#">Service</a>
+                    <a href="services">Service</a>
                 </li>
                 <li>
-                    <a href="#">Engagement Models</a>
+                    <a href="engagement-models">Engagement Models</a>
                 </li>
             </ul>
             <!--<div class="button">
@@ -24,16 +24,16 @@
             <h2>Who We Are</h2>
             <ul class="contact">
                 <li>
-                    <a href="#">About As</a>
+                    <a href="about-us">About Us</a>
                 </li>
                 <li>
-                    <a href="#">Blogs</a>
+                    <a href="blogs">Blogs</a>
                 </li>
                 <li>
-                    <a href="#">Careers</a>
+                    <a href="careers">Careers</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact-us">Contact</a>
                 </li>
             </ul>
         </div>
@@ -41,19 +41,19 @@
             <h2>Services</h2>
             <ul class="contact">
                 <li>
-                    <a href="#">User Experience</a>
+                    <a href="user-experience">User Experience</a>
                 </li>
                 <li>
-                    <a href="#">Interface Design</a>
+                    <a href="interface-design">Interface Design</a>
                 </li>
                 <li>
-                    <a href="#">UI Development</a>
+                    <a href="ui-development">UI Development</a>
                 </li>
-                <li>
+                <!--<li>
                     <a href="#">End To End Development</a>
-                </li>
+                </li>-->
                 <li>
-                    <a href="#">Usability Testing</a>
+                    <a href="usability-testing">Usability Testing</a>
                 </li>
             </ul>
         </div>
@@ -70,10 +70,10 @@
                     <a href="tel:+91 9940410072">+91 9940410072</a>
                 </li>
                 <li>
-                    <a href="#">Linkedin</a>
+                    <a href="https://www.linkedin.com/school/uxmint">Linkedin</a>
                 </li>
                 <li>
-                    <a href="#">Medium</a>
+                    <a href="https://medium.com/uxmint">Medium</a>
                 </li>
             </ul> 
           
