--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -15,7 +15,7 @@
                <h2> We have created <br> products that are <br> loved by users and <br> product owners</h2>
                <h6>If you want your product to be <br> loved by its users ?</h6>
                <div class="button">
-                  <div class="btn btn-white">Let us Know <img src="./assets/images/rightarrow-white.svg"></div>
+                  <div class="btn btn-white">Let us Know </div>
                </div>
             </div>
             </div>
@@ -85,7 +85,7 @@
             <div class="design-left">
                <h2> We have built & are building some great products together</h2>
                <div class="button">
-                  <div class="btn btn-white">Check our Service <img src="./assets/images/rightarrow-white.svg"></div>
+                  <div class="btn btn-white">Check our Service</div>
                </div>
             </div>
          </div>
@@ -110,7 +110,7 @@
             <h2>We are a mix of Designers, Artists, <br> Psychologists, Programmers, Engineers, <br> Architects & more. </h2>
             <h6>We've come together to build great Products and Services. Drop in <br> your detail if you want to be a part of us.</h6>
             <div class="button">
-               <div class="btn btn-white">Join our Team <img src="./assets/images/rightarrow-red.svg"></div>
+               <div class="btn btn-white">Join our Team</div>
             </div>
          </div>
       </div>
