--- a/src/app/modules/career/components/graphic-design-description/graphic-design-description.component.html
+++ b/src/app/modules/career/components/graphic-design-description/graphic-design-description.component.html
@@ -18,7 +18,7 @@
                    <h6>Location</h6>
                    <h5>Chennai, India</h5>
                    <div class="button only-mobile">
-                      <div class="btn btn-white " routerLink="/careers"><img src="./assets/images/left-arrow.svg"> Back</div>
+                      <div class="btn btn-white " routerLink="/careers">Back</div>
                    </div>
                 </div>
                 <div class="col-md-7 description">
@@ -50,7 +50,7 @@
                     - Understanding of HTML/CSS is a plus
                    </p>
                    <div class="button">
-                      <div class="btn btn-white" routerLink="/career/job/apply">Apply<img src="./assets/images/rightarrow-white.svg"></div>
+                      <div class="btn btn-white" routerLink="/career/job/apply">Apply</div>
                    </div>
                 </div>
              </div>
