--- a/src/app/modules/career/components/job-apply/job-apply.component.html
+++ b/src/app/modules/career/components/job-apply/job-apply.component.html
@@ -18,7 +18,7 @@
                    <h6>Location</h6>
                    <h5>Chennai, India</h5>
                    <div class="button ">
-                      <div class="btn btn-white" routerLink="/careers"><img src="./assets/images/left-arrow.svg"> Back</div>
+                      <div class="btn btn-white" routerLink="/careers"> Back</div>
                    </div>
                 </div>
                 <div class="col-md-7 add-form">
@@ -78,62 +78,12 @@
                                   </mat-form-field>
                               </div>
                               <div class="button">
-                                 <div class="btn btn-white" (click)="submitcareer()">Submit <img src="./assets/images/rightarrow-white.svg"></div>
+                                 <div class="btn btn-white" (click)="submitcareer()">Submit</div>
                               </div>
                           </div>
                       </form>
                   </div>
               </div>
-                <!--<div class="col-md-7 layout-right">
-                   <div class="layouts">
-                      <h2>Hey, Fill in the details below<br> to join us.</h2>
-                      <form [formGroup]="careerform" id="careerForm" name="careerForm" class="careerForm">
-                         <div class="row layouts1">
-                            <div class="col-md-6"  *ngFor="let position of careerPositions">
-                               <div class="custom-control custom-checkbox custom-control-inline">
-                                     <input type="checkbox" [id]="position.id" [(ngModel)]="position.checked" [value]="position.value" formControlName="position" (change)="onCareerChange(position.value)"  class="custom-control-input">
-                                     <label class="checkbox custom-control-label" [for]="position.id">{{ position.name }}</label>
-                                  </div>
-                            </div>
-                         </div>
-                         <div class="row">
-                            <div class="col-md-5">
-                               <div class="form-group bg-light">
-                                  <label class="label" for="name">Name</label>
-                                  <input type="text" class="form-control" formControlName="name" name="name" id="name" placeholder=" Your name">
-                               </div>
-                            </div>
-                            <div class="col-md-5">
-                               <div class="form-group bg-light">
-                                  <label class="label" for="emailId">Email </label>
-                                  <input type="email" class="form-control" formControlName="emailId" name="emailId" id="emailId" placeholder=" Your@email.com">
-                               </div>
-                            </div>
-                            <div class="col-md-5">
-                               <div class="form-group bg-light">
-                                  <label class="label" for="phonenumber">Phone</label>
-                                  <input type="text" class="form-control" formControlName="phonenumber" name="phonenumber" id="phonenumber" placeholder=" Your phone number">
-                               </div>
-                            </div>
-                            <div class="col-md-5">
-                               <div class="form-group bg-light">
-                                  <label class="label" for="portfolioUrl">Portfolio URL</label>
-                                  <input type="text" class="form-control" formControlName="portfolioUrl" name="portfolioUrl" id="portfolioUrl" placeholder=" Your Portfolio link">
-                               </div>
-                            </div>
-                            <div class="col-md-10">
-                               <div class="form-group bg-light">
-                                  <label for="exampleFormControlFile1" class="label">Attach Resume</label>
-                                  <input type="file" class="form-control-file" id="exampleFormControlFile1" placeholder=" Or drag & drop file here ">
-                               </div>
-                            </div>
-                            <div class="button">
-                               <div class="btn btn-white" (click)="submitcareer()">Submit <img src="./assets/images/rightarrow-white.svg"></div>
-                            </div>
-                         </div>
-                      </form>
-                   </div>
-                </div>-->
              </div>
           </div>
        </div>
