--- a/src/app/modules/career/components/job-apply/job-apply.component.scss
+++ b/src/app/modules/career/components/job-apply/job-apply.component.scss
@@ -3,20 +3,15 @@
 @import '~bootstrap/scss/mixins';
 
 .career-ux{
-   
     .banner{
-        background-image: url('/dev/assets/images/bg3.png');
-        background-repeat: no-repeat;
-        background-size: cover;
         position: relative;
         background-color: #995BEB;
         height: 770px;
-        .careerux-layout1{
-            padding: 300px 30px;
-        }
+        padding: 245px 0px;
         h1{
             font-size: 56px;
             color: #000000;
+            font-family: Baskerville;
             span{
                 color: #FFFFFF;
             }
@@ -25,6 +20,7 @@
             font-size: 36px;
             color: #282829;
             padding-top: 25px;
+            font-family: Muli;
             span{
                 color: #FFFFFF;
                 text-decoration: underline;
@@ -32,15 +28,9 @@
         }
         @include media-breakpoint-down(lg) {
             height: 650px;
-            .careerux-layout1{
-                padding: 250px 25px;
-            }
         }
         @include media-breakpoint-down(md) {
             height: 540px;
-            .careerux-layout1{
-                padding: 170px 15px;
-            }
             h1{
                 font-size: 36px;
             }
@@ -49,47 +39,47 @@
             }
         }
         @include media-breakpoint-down(sm) {
-           
             display: none;
             height: 500px;
-            .careerux-layout1{
-                padding: 100px 0px;
-            }
         }
     }
 
     .careerux-layout{
-        padding: 100px 30px;
         .careerux-design{
-            padding: 50px 30px;
+            padding: 130px 30px;
             h1{
                 font-size: 36px;
                 font-weight: 500;
                 color: #000000;
+                font-family: Baskerville;
             }
             h6{
                 font-size: 20px;
                 color: #8B8B8F;
                 padding-top: 50px;
+                font-family: Muli;
             }
             h5{
                 font-size: 20px;
-                color: #282829;  
+                color: #282829; 
+                font-family: Muli; 
             }
             .button{
                 margin-top: 40px;
-                img{
-                    margin-left: 5px;
-                    margin-right: 20px;
-                }
             }
             .btn-white{
-                background-color: #FFFFFF;
-                color: #282829;
+                border: 2px solid #0D0D0D;
+                border-radius: 0;
+                color: #0D0D0D;
+                cursor: pointer;
                 font-size: 20px;
-                padding: 15px;
-                border-radius: 0px;
-                border-color: #8B8B8F;
+                font-family: Muli;
+                padding: 8px 25px;
+                &:hover{
+                    background-color: #C3343C;
+                    color: #FFFFFF;
+                    border: 2px solid #FFFFFF;
+                }
             }
             .btn-white:focus{
                 border-color: #ced4da;
@@ -103,6 +93,7 @@
                     font-size: 18px;
                     font-weight: 400;
                     color: #464646;
+                    font-family: Muli;
                 }
             }
             mat-form-field{
@@ -116,22 +107,27 @@
             }
             .button{
                 margin-top: 40px;
-                img{
-                    margin-left: 35px;
-                }
                 .btn-white{
-                    background-color: #C3343C;
-                    color: #FCFCFC;
+                    border: 2px solid #0D0D0D;
+                    border-radius: 0;
+                    color: #0D0D0D;
+                    cursor: pointer;
                     font-size: 20px;
-                    padding: 15px;
-                    border-radius: 0px;
-                    padding-left: 25px;
+                    font-family: Muli;
+                    padding: 8px 25px;
+                    &:hover{
+                        background-color: #C3343C;
+                        color: #FFFFFF;
+                        border: 2px solid #FFFFFF;
+                    }
                 }
+                .btn-white:focus{
+                    border-color: #ced4da;
+                    box-shadow: none;
+                  }
             }
-          
         }
         @include media-breakpoint-down(lg) { 
-
             padding: 100px 30px;
             .careerux-design{
                 padding: 50px 30px;
