--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
@@ -1,10 +1,10 @@
 <div class="career-ui">
     <div class="banner only-mobile">
        <div class="container">
-          <div class="careerui-layout1 ">
+        
              <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
              <h6>Candidates can share their resume<br> with portfolio to  <span>work@uxmint.in</span></h6>
-          </div>
+          
        </div>
     </div>
     <div class="careerui-layout">
@@ -18,7 +18,7 @@
                    <h6>Location</h6>
                    <h5>Chennai, India</h5>
                    <div class="button only-mobile">
-                      <div class="btn btn-white " routerLink="/careers"><img src="./assets/images/left-arrow.svg"> Back</div>
+                      <div class="btn btn-white " routerLink="/careers"> Back</div>
                    </div>
                 </div>
                 <div class="col-md-7 description">
@@ -35,7 +35,7 @@
                       - Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is<br>preferred.
                    </p>
                    <div class="button">
-                      <div class="btn btn-white" routerLink="/career/job/apply">Apply<img src="./assets/images/rightarrow-white.svg"></div>
+                      <div class="btn btn-white" routerLink="/career/job/apply">Apply</div>
                    </div>
                 </div>
              </div>
